# scholare

./: .env.example  .gitignore  404.html  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  config_example.json  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml
architecture/: index.html
changelog/: index.html
contributing/: index.html
docs/: changelog.md  index.md
examples/: cloud_notebook_template.ipynb  original_notebook.ipynb  test_programmatic.py
output_relevance_test/2026-03-06_EEG_bias_electrode/: research_notes.md  results.bib  results.csv  run_summary.txt
output_test_programmatic/2026-03-04_federated_learning_differential_privacy/: research_notes.md  results.bib  results.csv  run_summary.txt
scholare/: __init__.py  __main__.py  api.py  config.py  downloader.py  exporters.py  notes.py  pipeline.py  utils.py  visualizations.py
search/: search_index.json
tests/: test_config.py  test_utils.py
